--- a/index.html
+++ b/index.html
@@ -1,15 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website ZATIN</h1>  
-        <p>This is my new website which is hosted on GitHub Pages!</p>
-    </main>
-  </body>
+<html>
+    <head>
+        <link rel="stylesheet" href="./CSS/style.css">
+        <script src="https://kit.fontawesome.com/d1c31434c9.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+            <div id="div_1">
+                <section class="top">
+                <section class="main">
+                    <a href="#div_1" class="one">HOME</a>
+                    <a href="#div_2" class="one">ABOUT</a>
+                    <a href="" class="one">RESUME</a>
+                    <a href="" class="one">WORK</a>
+                    <a href="" class="one">TESTIMONIAL</a>
+                    <a href="" class="one">CONTACT</a>
+                </section>
+                </section>
+                <div class="p_1">
+                <h1>I'm Tonghiang..</h1>
+                <p>I'm a <b>graphic designer, illustrator</b> and<b>webdesigner</b> creating awesome and
+                    <br>
+                    <br> effective visual identities for companies of all sizes around the globe. Let's
+                    <br>
+                    <br> <b>start scrolling</b> and learn more <b>about me</b>.
+                </p>
+                <hr style="height:0.1px;border-width:0;color:gray;background-color:gray; width: 30%;">
+                <p>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f" id="facebook"></i></a>
+                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.google.com/" target="_blank"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="https://kh.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://en.wikipedia.org/wiki/Basketball" target="_blank"><i class="fa-sharp fa-solid fa-volleyball"></i></a>
+                    <a href="https://www.skype.com/en/" target="_blank"><i class="fa-brands fa-skype"></i></a>
+                </p>
+                </div>
+            </div>       
+        <div id="div_2">
+            <img src="./image/img_avatar.png" alt="user">
+        <div class="p_2">
+        <h2>About Me</h2>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+            <br>
+            <br>laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+            <br>
+            <br>beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+            <br>
+            <br>odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+            <br>
+            <br>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            <br>
+            <br>quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
+            <br>
+            <br>voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+            <br>
+            <br>laboriosam.
+        </p>
+        <h2>Contact Details</h2>
+        <p>Giri Designs
+            <br>
+            <br>50, Thiruvoodal Street,
+            <br>
+            <br>Thiruvannamalai - 606 601, TN.
+            <br>
+            <br>+91 94884 87853</p>
+            <a href="giridesigns5@gmail.com" style="color: orange;">giridesigns5@gmail.com</a>
+        </div>
+        <button type="button" class="btn"><i class="fa-solid fa-download fa-xs"></i> Download Resume</button>
+        </div>
+    </body>
+    <footer>
+        <div onclick="scrollToTop()" class="scrollTop"><i class="fa-sharp fa-solid fa-arrow-up fa-2xs" style="color: white;"></i></div>
+    </footer>
 </html>
